--- a/epsi-exercice-sfc-2023/package.json
+++ b/epsi-exercice-sfc-2023/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.4.15",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
